# avendesora-sway-utilities

./: .bump.cfg.nt  README.rst  pyproject.toml
avendesora_sway_utilities/: clear_clipboard.py  copy_to_clipboard.py  get_window_title.py  send_keystrokes.py  send_mouse_click.py
